<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/ScollView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="30dp"
                android:text="@string/Email"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintBaseline_toBaselineOf="@+id/emailid" />

            <TextView
                android:id="@+id/addressvalu"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:onClick="clickMap"
                android:text="@string/NoData"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.686"
                app:layout_constraintLeft_toRightOf="@+id/textView5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/Address"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/addressvalu" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="30dp"
                android:text="@string/Website"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="@+id/textView9"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBaseline_toBaselineOf="@+id/webaddress" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="30dp"
                android:text="@string/Phone"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="@+id/textView5"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBaseline_toBaselineOf="@+id/phoneno" />

            <TextView
                android:id="@+id/webaddress"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="17dp"
                android:onClick="clickUrl"
                android:text="@string/NoData"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintLeft_toLeftOf="@+id/emailid"
                app:layout_constraintRight_toRightOf="@+id/emailid"
                app:layout_constraintTop_toBottomOf="@+id/emailid" />

            <TextView
                android:id="@+id/phoneno"
                android:layout_width="115dp"
                android:layout_height="19dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:onClick="clickCall"
                android:text="@string/NoData"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="@+id/addressvalu"
                app:layout_constraintTop_toBottomOf="@+id/addressvalu"
                app:layout_constraintLeft_toLeftOf="@+id/addressvalu" />

            <ImageButton
                android:id="@+id/youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="youTubeClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintLeft_toRightOf="@+id/twitter"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/webaddress"
                app:srcCompat="@mipmap/ic_youtube" />

            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="twitterClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/gplus"
                app:layout_constraintTop_toBottomOf="@+id/webaddress"
                app:srcCompat="@mipmap/ic_twitter" />

            <ImageButton
                android:id="@+id/gplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:onClick="googlePlusClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/fb"
                app:layout_constraintTop_toBottomOf="@+id/webaddress"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/ic_glus" />

            <ImageButton
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="facebookClicked"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website"
                app:srcCompat="@mipmap/ic_fb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="178dp"
                android:layout_height="156dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="11dp"
                android:onClick="onClick"
                android:src="@drawable/missing"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_name" />

            <TextView
                android:id="@+id/location"
                android:layout_width="349dp"
                android:layout_height="22dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/official_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office" />

            <TextView
                android:id="@+id/emailid"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:onClick="clickEmail"
                android:text="@string/NoData"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.225"
                app:layout_constraintLeft_toLeftOf="@+id/phoneno"
                app:layout_constraintRight_toRightOf="@+id/phoneno"
                app:layout_constraintTop_toBottomOf="@+id/phoneno" />

            <TextView
                android:id="@+id/office"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>